# mind_tape

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/app/api/: extension.py  health.py  memory.py
backend/app/core/: auth.py  config.py  database.py  logging.py
backend/app/models/: memory.py
backend/app/schemas/: memory.py
backend/app/services/: graph.py  llm.py  memory.py  rag.py
backend/app/vector/: chunking.py  search.py  store.py
backend/app/websocket/: manager.py  routes.py
backend/app/workers/: queue.py  tasks.py
backend/tests/: test_api.py  test_llm.py  test_vector.py  test_websocket.py  test_workers.py
docs/: ARCHITECTURE.md
extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
frontend/: api.js  graph.js  index.html  styles.css
