[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.14.7"
fastapi = "0.109.0"
uvicorn = {version = "0.27.0", extras = ["standard"]}
pydantic = "2.5.3"
pydantic-settings = "2.1.0"
sqlmodel = "0.0.14"
chromadb = "0.4.22"
sentence-transformers = "2.2.2"
openai = "1.10.0"
httpx = "0.26.0"
python-jose = {version = "3.3.0", extras = ["cryptography"]}
passlib = {version = "1.7.4", extras = ["bcrypt"]}
python-multipart = "0.0.6"
websockets = "12.0"
aiosqlite = "0.19.0"
rank-bm25 = "0.2.2"
numpy = "1.26.3"
tiktoken = "0.5.2"
pytest = "7.4.4"
pytest-asyncio = "0.23.3"
python-dotenv = "^1.2.1"
greenlet = ">=3.1"
huggingface-hub = "<0.24"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
extend-select = [
    "I",
    "C4",
    "UP",
    "YTT",
    "TID",
    "SIM",
    "Q",
    "RUF100",
    "F"
]
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.ruff.lint]
select = [
    "F",     # pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "C90",   # mccabe complexity
    "I",     # isort
    "B",     # flake8-bugbear
    "TID",   # flake8-tidy-imports
    "UP",    # pyupgrade
    "Q",     # flake8-quotes
    "RUF",   # Ruff-specific rules
]
ignore = []

[tool.ruff.lint.isort]
force-single-line = false
known-first-party = ["your_package"]
lines-after-imports = 2
combine-as-imports = true